# cupertino-terminal

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MACOS-BUGS.md  MIGRATION-PLAN.md  MIGRATION-VTO.md  README.md  README.tr.md  SAME-PAGE-LOG.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
scripts/: benchmark-pty.js  clean.js  set-as-default-terminal.sh  smoke-tauri.js
spikes/zerolink-rs/: gen-vectors.mjs
src/: index.html  main.js  natureco-account.js  path-utils.js  preload.js  pty-params.js  renderer.js  session-state.mjs  shell-runtime.js  styles.css  term-api-tauri.js  zerolink-cli.js  zerolink-client.js  zerolink-crypto.js  zerolink-host.js  zerolink-peer.js  zerolink-proto.js  zerolink-transfer.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  pty.rs
src-tauri/src/zerolink/: mod.rs
src/modules/: error-logger.js  i18n.js  settings-panel.js  theme-engine.js  zerolink-ui.js
src/shell-integration/: .zshrc  bash.bash  fish.fish
src/types/: index.d.ts
test/: path-utils.test.js  pty-params.test.js  shell-integration.test.js  shell-runtime.test.js  zerolink-proto.test.js  zerolink-security.test.js
