[package]
name = "cupertino-terminal"
version = "0.5.0"
description = "Cupertino Terminal Tauri shell"
authors = ["NatureCo"]
edition = "2021"

[lib]
name = "cupertino_terminal_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
percent-encoding = "2"
portable-pty = "0.9.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tempfile = "3"
url = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
